# Vardr

./: Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  WIKI_MANUAL.md  setup_mac_vardr_agent.sh
.github/workflows/: build.yml
agent/: Cargo.toml
agent/src/: main.rs
docs/iso_29110/: SI_01_Implementation_Report.md
docs/iso_29110/pm/: PM_01_Project_Plan.md  PM_02_01_Sprint1_Report.md  PM_02_02_Sprint2_Report.md
scripts/: e2e_test.sh
src/: alerts.rs  auto_restart.rs  docker.rs  main.rs  models.rs  prometheus.rs  uptime.rs
static/: app.js  index.html  style.css
