[package]
name = "vardr"
version = "0.4.0"
edition = "2021"
description = "🛡️ Várðr — Asgard Monitoring Dashboard"
authors = ["Asgard Team"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2"
tokio-stream = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
